@@ -239,7 +239,7 @@ $config->footers = array
 	'<a href="' . Visualizer::actionHref("config.html") . '">設定情報</a>',
 );
 
-// 一覧の表示形式 (特定値)
+// 既定の一覧表示形式 (特定値)
 // - Configuration::LIST_DOUBLE		二列で表示します。
 // - Configuration::LIST_SINGLE		一列で表示します。
 $config->listType = Configuration::LIST_DOUBLE;
